<resources>
    <string name="app_name">Manager Tynkow</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="firstname">Firstname*</string>
    <string name="surname">Surname*</string>
    <string name="phone">Phone*</string>
    <string name="city">City*</string>
    <string name="street">Street</string>
    <string name="buildingNumber">Building number</string>
    <string name="apartmentNumber">Apartment number</string>
    <string name="nameOfOrder">Name of order*</string>
    <string name="startDate">Start date*</string>
    <string name="endDate">End date</string>
    <string name="price_m2">Price of m^2*</string>
    <string name="add">Add</string>
</resources>
